# codestats

./: .dockerignore  .envrc  .gitignore  .gmrc  Dockerfile  Dockerfile.migrate  README.md  Recent.py  clone-gitlab.sh  clone-gitolite.sh  discover_gitlab.py  discover_gitolite.py  docker-compose.yaml  fetch_known_repos.py  flake.nix  index_local_repos.py  load_csvs.py  main.py  package-lock.json  package.json  pyproject.toml  schema.py  schema.sql  utils.py
migrations/: current.sql
migrations/committed/: 000001.sql  000002.sql
pages/: 01_Top_N.py  02_Timelines.py  03_Large_things.py  04_File_listing.py  05_Projects-Groups.py
schema/: __main__.py  initdb.sh  schema.sql
schema/functions/: mergestat.add_repo_import(uuid, text, text, uuid[]).sql  mergestat.add_service_auth_credential(text, text, text).sql  mergestat.add_service_auth_credential(uuid, text, text, text, text).sql  mergestat.add_sync_variable(uuid, text, text, text).sql  mergestat.container_syncs_latest_sync_runs(mergestat.container_syncs).sql  mergestat.enable_container_sync(uuid, uuid).sql  mergestat.fetch_service_auth_credential(uuid, text, text).sql  mergestat.fetch_sync_variable(uuid, text, text).sql  mergestat.get_repos_page_header_stats().sql  mergestat.get_repos_syncs_by_status(uuid, text).sql  mergestat.repo_sync_queue_has_error(mergestat.repo_sync_queue).sql  mergestat.set_current_timestamp_updated_at().sql  mergestat.set_sync_job_status(text, bigint).sql  mergestat.simple_repo_sync_queue_cleanup(integer).sql  mergestat.simple_sqlq_cleanup(integer).sql  mergestat.sync_now(uuid).sql  (+18 more)
(+41 files in other folders)
